correction de la validation des produits
