# storage/api-docs/api-docs.json
@@ -1,8 +1,8 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "Shop API",
-        "description": "Documentation officielle de l'API Shop",
+        "title": "MyAPI",
+        "description": "Documentation officielle de MyAPI",
         "version": "1.0.0"
     },
     "servers": [
@@ -56,12 +56,7 @@
                     "500": {
                         "description": "Erreur serveur"
                     }
-                },
-                "security": [
-                    {
-                        "sanctum": []
-                    }
-                ]
+                }
             },
             "post": {
                 "tags": [
